# Swiftcanon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _compile_shaders.sh  _package.sh  _package_debug.sh  _package_release.sh
docs/: Vulkan.drawio
src/: CommandDispatcher.cpp  CommandDispatcher.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Logger.cpp  Logger.h  Swapchain.cpp  Swapchain.h  Swiftcanon.cpp  Swiftcanon.h  VulkanInstance.cpp  VulkanInstance.h  Window.cpp  Window.h  main.cpp  pch.h  utils.cpp  utils.h
src/models/: .gitignore
src/shaders/: shader.vert
